--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,11 @@ dependencies:
   - python=3.10
   - pip
   - pip:
+    - pre-commit
     - pytest
     - numpy
     - pandas
     - scikit-learn
+    - black
+    - isort
+    - flake8
