--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,16 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
+  - repo: local
+    hooks:
+    -   id: run-local-pytest
+        name: Run Pytest
+        entry: pytest
+        language: system
+        types: [python]
+        files: |
+            (?x)^(
+                FairFare/.*\.py|
+                tests/.*\.py
+            )$
+        always_run: true # Run on every commit
