--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,120 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10.17
-  - pip
-  - poetry
+  - anyio=4.9.0=pyh29332c3_0
+  - backports=1.0=pyhd8ed1ab_5
+  - backports.tarfile=1.2.0=pyhd8ed1ab_1
+  - blinker=1.9.0=pyhff2d567_0
+  - brotli-python=1.1.0=py310hb4ad77e_2
+  - bzip2=1.0.8=h99b78c6_7
+  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - cachecontrol=0.14.3=pyha770c72_0
+  - cachecontrol-with-filecache=0.14.3=pyhd8ed1ab_0
+  - certifi=2025.4.26=pyhd8ed1ab_0
+  - cffi=1.17.1=py310h497396d_0
+  - charset-normalizer=3.4.2=pyhd8ed1ab_0
+  - cleo=2.1.0=pyhd8ed1ab_1
+  - click=8.2.1=pyh707e725_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - crashtest=0.4.1=pyhd8ed1ab_1
+  - distlib=0.3.9=pyhd8ed1ab_1
+  - dulwich=0.22.8=py310hde4708a_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - filelock=3.18.0=pyhd8ed1ab_0
+  - findpython=0.6.3=pyhff2d567_0
+  - flask=3.1.1=pyhd8ed1ab_0
+  - h11=0.16.0=pyhd8ed1ab_0
+  - h2=4.2.0=pyhd8ed1ab_0
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - httpcore=1.0.9=pyh29332c3_0
+  - httpx=0.28.1=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - idna=3.10=pyhd8ed1ab_1
+  - importlib-metadata=8.6.1=pyha770c72_0
+  - importlib_resources=6.5.2=pyhd8ed1ab_0
+  - itsdangerous=2.2.0=pyhd8ed1ab_1
+  - jaraco.classes=3.4.0=pyhd8ed1ab_2
+  - jaraco.context=6.0.1=pyhd8ed1ab_0
+  - jaraco.functools=4.1.0=pyhd8ed1ab_0
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - keyring=25.6.0=pyh534df25_0
+  - libblas=3.9.0=31_h10e41b3_openblas
+  - libcblas=3.9.0=31_hb3479ef_openblas
+  - libcxx=20.1.5=ha82da77_0
+  - libexpat=2.7.0=h286801f_0
+  - libffi=3.4.6=h1da3d7d_1
+  - libgfortran=14.2.0=heb5dd2a_105
+  - libgfortran5=14.2.0=h2c44a93_105
+  - liblapack=3.9.0=31_hc9a63f6_openblas
+  - liblzma=5.8.1=h39f12f2_1
+  - libopenblas=0.3.29=openmp_hf332438_0
+  - libsqlite=3.49.2=h3f77e49_0
+  - libzlib=1.3.1=h8359307_2
+  - llvm-openmp=20.1.5=hdb05f8b_0
+  - markupsafe=3.0.2=py310hc74094e_1
+  - more-itertools=10.7.0=pyhd8ed1ab_0
+  - msgpack-python=1.1.0=py310h7306fd8_0
+  - ncurses=6.5=h5e97a16_3
+  - openssl=3.5.0=h81ee809_1
+  - packaging=25.0=pyh29332c3_1
+  - pbs-installer=2025.5.17=pyhd8ed1ab_0
+  - pip=25.1.1=pyh8b19718_0
+  - pkginfo=1.12.1.2=pyhd8ed1ab_0
+  - platformdirs=4.3.8=pyhe01879c_0
+  - poetry=2.1.3=pyh534df25_0
+  - poetry-core=2.1.3=pyhd8ed1ab_0
+  - pycparser=2.22=pyh29332c3_1
+  - pyproject_hooks=1.2.0=pyhd8ed1ab_1
+  - pysocks=1.7.1=pyha55dd90_7
+  - python=3.10.17=h6cefb37_0_cpython
+  - python-build=1.2.2.post1=pyhff2d567_1
+  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+  - python-installer=0.7.0=pyhff2d567_1
+  - python_abi=3.10=7_cp310
+  - rapidfuzz=3.13.0=py310h853098b_0
+  - readline=8.2=h1d1bf99_2
+  - requests=2.32.3=pyhd8ed1ab_1
+  - requests-toolbelt=1.0.0=pyhd8ed1ab_1
+  - setuptools=80.8.0=pyhff2d567_0
+  - shellingham=1.5.4=pyhd8ed1ab_1
+  - sniffio=1.3.1=pyhd8ed1ab_1
+  - tk=8.6.13=h5083fa2_1
+  - tomli=2.2.1=pyhd8ed1ab_1
+  - tomlkit=0.13.2=pyha770c72_1
+  - trove-classifiers=2025.5.9.12=pyhd8ed1ab_0
+  - typing_extensions=4.13.2=pyh29332c3_0
+  - urllib3=2.4.0=pyhd8ed1ab_0
+  - virtualenv=20.31.2=pyhd8ed1ab_0
+  - werkzeug=3.1.3=pyhd8ed1ab_1
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - xattr=1.1.0=py310h493c2e1_1
+  - zipp=3.22.0=pyhd8ed1ab_0
+  - zstandard=0.23.0=py310h078409c_2
+  - pip:
+      - black==24.4.0
+      - cfgv==3.4.0
+      - fairfare==0.1.0
+      - flake8==7.0.0
+      - identify==2.6.12
+      - iniconfig==2.1.0
+      - isort==5.13.2
+      - joblib==1.5.1
+      - mccabe==0.7.0
+      - mypy-extensions==1.1.0
+      - nodeenv==1.9.1
+      - numpy==1.26.4
+      - pandas==2.2.3
+      - pathspec==0.12.1
+      - pluggy==1.6.0
+      - pre-commit==4.2.0
+      - pycodestyle==2.11.1
+      - pyflakes==3.2.0
+      - pytest==8.3.5
+      - python-dateutil==2.9.0.post0
+      - pytz==2025.2
+      - pyyaml==6.0.2
+      - scikit-learn==1.6.1
+      - scipy==1.15.3
+      - six==1.17.0
+      - threadpoolctl==3.6.0
+      - tzdata==2025.2
