--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -8,17 +8,19 @@ repos:
       - id: check-json
       - id: check-added-large-files
   - repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 24.4.0 # It's good practice to keep this in sync with your poetry.lock
     hooks:
       - id: black
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2 # Keep this in sync as well
     hooks:
       - id: isort
   - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+    rev: 7.0.0 # Keep this in sync with your poetry.lock
     hooks:
       - id: flake8
+        # Add this line to specify additional dependencies for the hook
+        additional_dependencies: [flake8-pyproject]
   - repo: local
     hooks:
       - id: run-local-pytest
