--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,6 @@ line_length = 120
 [tool.flake8]
 ignore = "E203 W503 E501"
 max-line-length = 120
+
+[tool.poetry.scripts]
+all = "scripts.lint:main"
